{
    "name": "GameTouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "d6864cad-db26-4867-8813-36486417c3ae",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "c22910f8-536c-40d4-9c97-039feca767f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "f8cba6a7-b602-4a70-81e8-0b33ed5f5628",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95516cce-e52b-4992-ac3d-729066dda2ba",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mobile Control",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9514cadc-3172-44be-8634-88391b629864",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Mobile Control",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile Control",
            "bindingGroup": "Mobile Control",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}